plugins {
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
    mavenLocal()
    maven { url = uri('https://repo.spring.io/milestone') }
    maven { url = uri('https://repo.spring.io/snapshot') }
    maven { url = uri('https://repo.maven.apache.org/maven2/') }
}

dependencies {
    implementation project(':common')
    compileOnly project(':common:loader-utils')
    compileOnly project(':standalone:app')

    compileOnly 'it.ohalee.basementlib:api:1.5'
    compileOnly 'it.ohalee.basementlib:common:1.3.4'

    compileOnly 'com.github.docker-java:docker-java:3.3.3'
    compileOnly 'com.github.docker-java:docker-java-transport-httpclient5:3.3.3'
}

shadowJar {
    archiveFileName = 'cerebrum-standalone.jarinjar'
}

artifacts {
    archives shadowJar
}